# Videoseed_API

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-dev.yaml  docker-compose-tests.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
docker/app/: Dockerfile
docker/nginx/: nginx.conf
docker/nginx/configs/: site.conf
docker/test/: Dockerfile
flask_app/: app.py  blueprint.py  wsgi_app.py
flask_app/api/v1/: youtube_api.py
flask_app/settings/: client.py  config.py  logger.py
flask_app/static/: openapi.yaml
tests/: test_youtube_api.py
