[tool.poetry]
name = "Videoseed_task"
version = "0.1.0"
description = "Тестовое задание"
authors = ["Виктор <DerTod28>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
Flask = "^2.2.2"
python-dotenv = "0.20.0"
gevent = "^22.10.2"
flask-restful = "^0.3.9"
google-api-python-client = "^2.65.0"
pytest = "^7.2.0"
flask-swagger-ui = "^4.11.1"
pytube = "^12.1.0"
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
